# petta

./: .gitignore  .gitmodules  CLAW.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml  run_omegaclaw.metta  run_omegaclaw.sh  test.sh
.github/ci/: Dockerfile
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: advanced_usage.rs  console.ts  empty.metta  test_extensions.metta  test_faiss.metta  test_ts_import_advanced.metta  test_ts_import_collision.metta  torch.metta  ts_advanced_import.ts  ts_import.metta  ts_import_file.ts
lib/omegaclaw/: lib_omegaclaw.metta
lib/omegaclaw/memory/: vector_store.json
lib/omegaclaw/src/: channels.metta  memory.metta  skills.metta  utils.metta
prolog/: filereader.pl  main.pl  metta.pl  omegaclaw_ext.pl  parser.pl  server_loop.pl  spaces.pl  specializer.pl  translator.pl  utils.pl
rust/pathmap-derive/src/: lib.rs
rust/src/: MODULES.md  api.rs  benchmark.rs  cli.rs  core.rs  differential.rs  gxhash.rs  hash_fallback.rs  lib.rs  lib_tests.rs.bak  main.rs  observability.rs  optimize.rs  profiler.rs  reliability.rs  repl.rs  values.rs  viz.rs  xxhash_fallback.rs
rust/src/api/: config.rs  engine.rs  mod.rs  result.rs
rust/src/backends/: mod.rs
rust/src/core/: backend.rs  errors.rs  mod.rs  types.rs  values.rs
rust/src/engine/: backend.rs  backends.rs  client.rs  config.rs  errors.rs  formatters.rs  mod.rs  protocol.rs  server.rs  subprocess.rs  values.rs  version.rs
rust/src/mork/: mod.rs
rust/src/parser/: mod.rs
rust/src/pathmap/: PHASE4_IMPLEMENTATION.md  REORGANIZATION_PLAN.md  arena_compact.rs  counters.rs  dependent_zipper.rs  empty_zipper.rs  experimental.rs  merkleization.rs  mod.rs  morphisms.rs  (+12 more)
src/: filereader.pl  lib.rs  main.rs  metta.pl  spaces.pl  translator.pl  utils.pl  vector_space.rs
tests/: auto_ci.rs  differential.rs  integration_tests.rs  protocol_integration.rs  test_utils.rs  ws_extension.rs
(+53 files in other folders)
